# auditree-harvest

./: .gitignore  .pre-commit-config.yaml  CHANGES.md  CONTRIBUTING.md  Makefile  README.md  setup.cfg
.github/ISSUE_TEMPLATE/: new-collaborator.md
.github/workflows/: python-publish.yml
harvest/: __init__.py  cli.py  collator.py  exceptions.py  reporter.py  utils.py
test/: __init__.py  test_base_reporter.py  test_cli_collate.py  test_cli_report.py  test_cli_reports.py  test_collator.py  test_utils.py
test/fixtures/: __init__.py  bar_fixture_report.md.tmpl  bar_fixture_report.py  foo_fixture_report.py  not_a_report.py  rando_output.json
