[metadata]
name = auditree_harvest
version = attr: harvest.__version__
description = The Auditree evidence reporting tool
author = Auditree Security and Compliance
author_email = al.finkelstein@ibm.com
url = https://github.com/ComplianceAsCode/auditree-harvest
license = Apache License 2.0
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
long_description = https://github.com/ComplianceAsCode/auditree-harvest

[options]
packages = find:
install_requires =
    ilcli>=0.2.3
    utilitarian>=0.41.7
    GitPython>=3.0.4
    jinja2>=2.10.3

[options.packages.find]
exclude =
    test

[bdist_wheel]
universal = 1

[options.extras_require]
dev =
    pre-commit>=2.4.0
    pytest>=4.4.1
    pytest-cov>=2.6.1
    recommonmark
    Sphinx>=1.7.2

[options.entry_points]
console_scripts =
    harvest=harvest.cli:run
