[metadata]
name = auditree-harvest
version = attr: harvest.__version__
description = The Auditree data gathering and reporting tool
author = Auditree Security and Compliance
author_email = al.finkelstein@ibm.com
url = https://auditree.github.io/
license = Apache License 2.0
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
long_description_content_type = text/markdown
long_description = file: README.md

[options]
packages = find:
install_requires =
    auditree-framework>=1.0.0

[options.packages.find]
exclude =
    test.*
    test

[bdist_wheel]
universal = 1

[options.entry_points]
console_scripts =
    harvest=harvest.cli:run

[options.extras_require]
dev =
    pre-commit>=2.4.0
    pytest>=4.4.1
    pytest-cov>=2.6.1
    recommonmark
    Sphinx>=1.7.2
    setuptools
    wheel
    twine

[flake8]
max-line-length = 88
extend-ignore = E203
